--- a/MyProxy/main.html
+++ b/MyProxy/main.html
@@ -3,7 +3,7 @@
 
 <html>
 <head>
-  <title>mirror - ɹoɹɹıɯ</title>
+  <title>LHN</title>
   <link rel="stylesheet" href="static/base.2.css" type="text/css" charset="utf-8"/>
   <link rel="icon" href="/favicon.ico" type="image/vnd.microsoft.icon" />
   <script type="text/javascript" charset="utf-8">
@@ -41,7 +41,7 @@
 <div id="container">
 
 <div id="header">
-  <span>mıɾɾoɾ</span><span>ɿoɿɿim</span>
+  <span>Welcome to my proxy page</span>
 </div>
 
 <div id="form_wrapper">
@@ -52,7 +52,6 @@
   </form>
 
   <div id="warning">
-  Fair use: All content belongs to the original copyright holders, respectively.
   </div>
 </div>
 
@@ -63,15 +62,6 @@
 </div>
 </div>
 
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-var pageTracker = _gat._getTracker("UA-1725949-3");
-pageTracker._initData();
-pageTracker._trackPageview();
-</script>
 
 </body>
 </html>
