--- a/MyProxy/static/base/html/main.html
+++ b/MyProxy/static/base/html/main.html
@@ -4,7 +4,7 @@
 <html>
 <head>
   <title>LHN</title>
-  <link rel="stylesheet" href="static/base.2.css" type="text/css" charset="utf-8"/>
+  <link rel="stylesheet" href="static/base/css/base.css" type="text/css" charset="utf-8"/>
   <link rel="icon" href="/favicon.ico" type="image/vnd.microsoft.icon" />
   <script type="text/javascript" charset="utf-8">
     var activeColor = "#000000";
