--- a/MyProxy/public/base/html/main.html
+++ b/MyProxy/public/base/html/main.html
@@ -1,4 +1,10 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head><title>LHN</title><link rel="stylesheet" href="static/base/css/base.css" type="text/css" charset="utf-8"><link rel="icon" href="/favicon.ico" type="image/vnd.microsoft.icon"><script type="text/javascript" charset="utf-8">var activeColor = "#000000";
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html>
+<head>
+    <title>LHN</title>
+    <link rel="stylesheet" href="static/base/css/base.css" type="text/css" charset="utf-8">
+    <link rel="icon" href="/favicon.ico" type="image/vnd.microsoft.icon">
+    <script type="text/javascript" charset="utf-8">var activeColor = "#000000";
     var disabledColor = "#959595";
     var defaultValue = "type url here...";
 
@@ -23,4 +29,18 @@
         box.style.color = disabledColor;
         box.value = defaultValue;
       }
-    }</script></head><body onload="loadBox()"><div id="wrapper"><div id="container"><div id="header"><span>Welcome to my proxy page</span></div><div id="form_wrapper"><form action="" method="get" accept-charset="utf-8"><div id="input_wrapper"><span id="http_prefix">http://</span><input onfocus="focusBox()" onblur="blurBox()" type="text" name="url" value="type url here..." id="url_entry"><input id="go_button" type="submit" value="Go"></div></form><div id="warning"></div></div><div class="secure">{% if secure_url %}<a href="{{secure_url}}">{% endif %}<img src="/static/{% if secure_url %}no{% endif %}lock.png" width="16" height="16"> {% if secure_url %}not secure</a>{% else %}secure{% endif %}</div></div></div></body></html>
+    }
+</script>
+    </head>
+<body onload="loadBox()">
+    <div id="wrapper">
+    <div id="container">
+        <div id="header"><span>Welcome to demo proxy</span></div>
+        <div id="form_wrapper">
+        <form action="" method="get" accept-charset="utf-8">
+            <div id="input_wrapper"><span id="http_prefix">http://</span>
+            <input onfocus="focusBox()" onblur="blurBox()" type="text" name="url" value="type url here..." id="url_entry">
+            <input id="go_button" type="submit" value="Go"></div></form><div id="warning"></div></div>
+        <div class="secure">{% if secure_url %}<a href="{{secure_url}}">{% endif %}
+            <img src="/static/{% if secure_url %}no{% endif %}lock.png" width="16" height="16"> {% if secure_url %}not secure</a>{% else %}secure{% endif %}
+        </div></div></div></body></html>
