--- a/MyProxy/public/base/html/main.html
+++ b/MyProxy/public/base/html/main.html
@@ -35,7 +35,7 @@
 <body onload="loadBox()">
     <div id="wrapper">
     <div id="container">
-        <div id="header"><span>Welcome to demo proxy</span></div>
+        <div id="header"><span>Welcome to demo nodejs proxy</span></div>
         <div id="form_wrapper">
         <form action="" method="get" accept-charset="utf-8">
             <div id="input_wrapper"><span id="http_prefix">http://</span>
